# cl8y-dex-terraclassic

./: .gitignore  .gitleaks.toml  CODEOWNERS  Makefile  NATIVE_TOKEN_WRAPPING.md  QA_TEMPLATE.md  README.md  docker-compose.qa-shared-host.yml  docker-compose.yml  render.yaml
.cursor/rules/: playwright-workers.mdc
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: contracts-wasm-optimizer.yml  test.yml
docker/: init-chain.sh
docs/: CG_CMC_COMPLIANCE.md  README.md  architecture.md  classic-terraswap-upstream-source.md  contracts-security-audit.md  contracts-terraclassic.md  deployment-guide.md  environment-matrix.md  frontend.md  indexer-invariants.md  integrators.md  limit-orders.md  local-development.md  operator-secrets.md  qa-onboarding.md  security-model.md  terraport.md  testing.md  twap-oracle.md
docs/adr/: 0001-hybrid-quoting-and-routing.md  0002-limit-book-surfacing.md
docs/qa-templates/: frontend-bug.md  qa-test-pass.md  wrap-unwrap-test-pass.md
docs/reference/: fee-discount-tiers.md
docs/reviews/20260409T030009Z/: ARCHITECTURE_GAP_MATRIX.md  GLAB_ISSUES.md  ISSUE_BACKLOG.md  README.md  RELEASE_READINESS_MATRIX.md  REVIEW.md  SECURITY_REVIEW.md  TEST_GAP_MATRIX.md
docs/runbooks/: indexer-reorg-replay-dedup.md  launch-checklist.md  wasm-admin-migration.md
docs/templates/: incident-dex-indexer.md
frontend-dapp/: .env.example  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.integration.ts  vitest.config.ts
frontend-dapp/e2e/: README.md  create-pair.spec.ts  fee-tier-tx.spec.ts  fee-tiers.spec.ts  global-setup.ts  hybrid-swap.spec.ts  limit-orders-tx.spec.ts  limit-orders.spec.ts  localterra-mnemonic.ts  navigation.spec.ts  pool-tx.spec.ts  pool.spec.ts  swap-tx.spec.ts  swap.spec.ts  wrap-pool.spec.ts  wrap-swap.spec.ts
frontend-dapp/e2e/fixtures/: dev-wallet.ts
frontend-dapp/e2e/helpers/: chain.ts  desktop-more-nav.ts  lcd.ts  swap-ui.ts  token-select.ts  wallet-ui.ts
frontend-dapp/patches/: @goblinhunt+cosmes+0.0.71-ghunt.21.patch
frontend-dapp/public/assets/: logo-options-preview.html
frontend-dapp/public/chains/: chainlist.json
frontend-dapp/src/: App.tsx  index.css  main.tsx  test-utils.tsx  theme-dark.css  theme-light.css  vite-env.d.ts  viteConfig.build.test.ts
frontend-dapp/src/hooks/: useLimitOrderEscrowBalance.ts  useLimitOrderForm.ts  useSyncMobileNavStack.ts  useTokenDisplayInfo.ts  useWallet.ts
frontend-dapp/src/lib/: mobileBottomNav.ts  (+1 more)
indexer/: .env.example  Cargo.toml
indexer/migrations/: 20260310000001_initial_schema.sql  20260310000002_align_schema.sql  20260310000003_add_pnl_tracking.sql  20260314000001_hook_events.sql  20260318000001_add_oracle_prices.sql  20260324000001_pairs_list_indexes.sql  20260326000001_limit_order_fills.sql  20260326120000_swap_events_unique_limit_lifecycle.sql
indexer/scripts/: seed-charts-integration.sql
indexer/src/: config.rs  lib.rs  main.rs  metrics.rs
indexer/src/api/: cg.rs  cmc.rs  hooks.rs  hybrid_route_opt.rs  limit_book_lcd.rs  mod.rs  oracle.rs  orderbook_sim.rs  overview.rs  pairs.rs  route_solver.rs  tokens.rs  traders.rs
indexer/src/db/queries/: assets.rs  candles.rs  hook_events.rs  limit_order_fills.rs  limit_order_lifecycle.rs  liquidity.rs  mod.rs  oracle.rs  pairs.rs  positions.rs  state.rs  swap_events.rs  traders.rs  volume.rs
indexer/src/indexer/: asset_resolver.rs  candle_builder.rs  mod.rs  oracle.rs  pair_discovery.rs  parser.rs  poller.rs  position_tracker.rs  seed_qa.rs  trader_tracker.rs  volume_aggregator.rs
indexer/src/lcd/: mod.rs  types.rs
indexer/tests/: api_cg.rs  api_cmc.rs  api_health.rs  api_hooks.rs  api_limit_book_deep.rs  api_limit_book_lcd_mock.rs  api_metrics.rs  api_oracle.rs  api_orderbook_lcd_mock.rs  api_overview.rs  api_pairs.rs  api_route_solve.rs  api_tokens.rs  api_traders.rs  candle_skip_zero_price.rs  position_tracker_clamp.rs  security.rs  swap_events_hybrid_columns.rs
indexer/tests/common/: lcd_mock.rs  mod.rs
scripts/: deploy-dex-local.sh  deploy-dex-mainnet.sh  deploy-dex-testnet.sh  e2e-provision-dev-wallet.sh  localnet-trading-swarm.sh  smoke-pool-swap.sh  status.sh
scripts/bots/: launch-swarm.sh  stop-swarm.sh  swarm.py
scripts/qa/: README.md  new-bug-cursor.sh  new-bug.sh  new-test-pass-cursor.sh  new-test-pass.sh  print-qa-tunnel-instructions.sh  qa-host.env  start-qa.sh  stop-qa.sh  upload-evidence.sh  write-frontend-env-local.sh
skills/: AGENTS_BUNDLE_DEV_WALLET.md  AGENTS_FRONTEND_PRODUCTION_BUILD.md  AGENTS_LOCALNET_TRADING_SWARM.md  AGENTS_TERRACLASSIC_GAS.md
smartcontracts/: Cargo.toml
smartcontracts/artifacts/: checksums.txt
smartcontracts/contracts/factory/: Cargo.toml
smartcontracts/contracts/factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
smartcontracts/contracts/fee-discount/: Cargo.toml
smartcontracts/contracts/fee-discount/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
smartcontracts/contracts/hooks/: README.md
smartcontracts/contracts/hooks/burn-hook/: Cargo.toml
smartcontracts/contracts/hooks/burn-hook/src/: contract.rs  lib.rs  msg.rs  state.rs
smartcontracts/contracts/hooks/lp-burn-hook/: Cargo.toml
smartcontracts/contracts/hooks/lp-burn-hook/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
smartcontracts/contracts/hooks/tax-hook/: Cargo.toml
smartcontracts/contracts/hooks/tax-hook/src/: contract.rs  lib.rs  msg.rs  state.rs
smartcontracts/contracts/pair/: Cargo.toml
smartcontracts/contracts/pair/src/: contract.rs  error.rs  lib.rs  msg.rs  orderbook.rs  state.rs
smartcontracts/contracts/router/: Cargo.toml
smartcontracts/contracts/router/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
smartcontracts/scripts/: deploy.sh  optimize.sh
smartcontracts/tests/: Cargo.toml
smartcontracts/tests/proptest-regressions/: lib.txt
smartcontracts/tests/src/: adversarial_token.rs  lib.rs  limit_order_tests.rs  mock_failing_hook.rs  tier_fixtures.rs
tokenlist/: README.md  tokenlist.json
(+111 files in other folders)
