[package]
name = "cl8y-dex-indexer"
version = "0.1.0"
edition = "2021"
description = "CL8Y DEX indexer for Terra Classic — charting, analytics, CoinGecko/CoinMarketCap API"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
