[package]
name = "cl8y-dex-indexer"
version = "0.1.0"
edition = "2021"
description = "CL8Y DEX indexer for Terra Classic — charting, analytics, CoinGecko/CoinMarketCap API"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["limit"] }
governor = "0.8"
tower_governor = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[dev-dependencies]
axum-test = "19"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal", "migrate"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["json", "query"] }
