[workspace]
resolver = "2"
members = [
  "contracts/factory",
  "contracts/pair",
  "contracts/router",
  "contracts/fee-discount",
  "contracts/hooks/burn-hook",
  "contracts/hooks/tax-hook",
  "contracts/hooks/lp-burn-hook",
  "packages/dex-common",
  "tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
cosmwasm-std = { version = "1.5.11", features = ["staking"] }
cosmwasm-schema = "1.5.9"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = { version = "1.1.2", features = ["library"] }
cw-utils = "1.0.3"
cw-multi-test = "1.2.0"
thiserror = "1.0.4"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
base64ct = "=1.7.3"
dex-common = { path = "packages/dex-common" }

# External packages
cw20-mintable = { git = "https://github.com/PlasticDigits/cw20-mintable", features = ["library"] }
treasury = { git = "https://gitlab.com/PlasticDigits/ustr-cmm", rev = "3a835bd52b06614746bac1518e0eece6ee50f69f", features = ["library"] }
wrap-mapper = { git = "https://gitlab.com/PlasticDigits/ustr-cmm", rev = "3a835bd52b06614746bac1518e0eece6ee50f69f", features = ["library"] }

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true
codegen-units = 1
