[package]
name = "cl8y-dex-tests"
version.workspace = true
edition.workspace = true

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw20 = { workspace = true }
cw2 = { workspace = true }
cw20-mintable = { workspace = true }
cw-multi-test = { workspace = true }
dex-common = { workspace = true }
cl8y-dex-factory = { path = "../contracts/factory", features = ["library"] }
cl8y-dex-pair = { path = "../contracts/pair", features = ["library"] }
cl8y-dex-router = { path = "../contracts/router", features = ["library"] }
cl8y-dex-burn-hook = { path = "../contracts/hooks/burn-hook", features = ["library"] }
cl8y-dex-tax-hook = { path = "../contracts/hooks/tax-hook", features = ["library"] }
cl8y-dex-lp-burn-hook = { path = "../contracts/hooks/lp-burn-hook", features = ["library"] }
cl8y-dex-fee-discount = { path = "../contracts/fee-discount", features = ["library"] }
treasury = { workspace = true }
serde = { workspace = true }
proptest = "1"
